syntax = "proto3";

package school;

option go_package = "github.com/HLLC-MFU/HLLC-2025/backend/module/school/proto/generated;generated";

import "google/protobuf/timestamp.proto";
import "pkg/proto/core/shared.proto";

// School message
message School {
  string id = 1;
  core.LocalizedName name = 2;
  core.LocalizedAcronym acronym = 3;
  core.LocalizedDetails details = 4;
  core.Photos photos = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}


// Request messages
message CreateSchoolRequest {
  core.LocalizedName name = 1;
  core.LocalizedAcronym acronym = 2;
  core.LocalizedDetails details = 3;
  core.Photos photos = 4;
}

message GetSchoolRequest {
  string id = 1;
}

message ListSchoolsRequest {
  core.PaginationRequest pagination = 1;
}

message UpdateSchoolRequest {
  string id = 1;
  core.LocalizedName name = 2;
  core.LocalizedAcronym acronym = 3;
  core.LocalizedDetails details = 4;
  core.Photos photos = 5;
}

message DeleteSchoolRequest {
  string id = 1;
}

// Response messages
message SchoolResponse {
  School school = 1;
}

message ListSchoolsResponse {
  repeated School schools = 1;
  core.PaginationResponse pagination = 2;
}

message DeleteSchoolResponse {
  bool success = 1;
} 

// School service definition
service SchoolService {
  rpc CreateSchool(CreateSchoolRequest) returns (SchoolResponse);
  rpc GetSchool(GetSchoolRequest) returns (SchoolResponse);
  rpc ListSchools(ListSchoolsRequest) returns (ListSchoolsResponse);
  rpc UpdateSchool(UpdateSchoolRequest) returns (SchoolResponse);
  rpc DeleteSchool(DeleteSchoolRequest) returns (DeleteSchoolResponse);
}